force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/aig_AI_Use_Case_Feedback__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Feedback</label>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>