force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/fields/aig_AI_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Use_Case__c</fullName>
    <label>AI Use Case</label>
    <referenceTo>aig_AI_Use_Case__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>