force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/fields/aig_Detail__c.field-meta.xml
<CustomField>
    <fullName>aig_Detail__c</fullName>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>