force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/fields/aig_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>aig_Review_Result__c</fullName>
    <label>Review Result</label>
    <type>TextArea</type>
</CustomField>