force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/fields/aig_Risk__c.field-meta.xml
<CustomField>
    <fullName>aig_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>aig_AI_Use_Case_Risk__c.aig_AI_Use_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.aig_AI_Use_Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>aig_AI_Use_Case_Risk__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>