force-app/main/default/objects/aig_AI_Use_Case_Feedback__c/fields/aig_Type__c.field-meta.xml
<CustomField>
    <fullName>aig_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Ethical</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Vulnerability</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Bias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>